<resources>
    <string name="app_name">Android Room Reservations</string>
    <string name="buildingDetails">Building details</string>
    <string name="room">Select room</string>
    <string name="city">Select city</string>
    <string name="building">Select building</string>
    <string name="backButton">Go back to the previous page</string>
    <string name="cityDetails">City details</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="roomDetails">Room details</string>
    <string name="reservation">Select reservation</string>
    <string name="createReservation">Create new reservation for this room</string>
    <string name="purpose">Purpose</string>
    <string name="create">Create</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="roomId">Room ID</string>
    <string name="currentReservation">Current reservations</string>
    <string name="reservationDetails">Reservation details</string>
    <string name="myReservations">My reservations</string>
    <string name="deleteReservation">Delete reservation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_reservation">UpdateReservationActivity</string>
    <string name="updateReservation">Update reservation</string>
    <string name="update">Update</string>
    <string name="googleMaps">Open in Google Maps</string>
</resources>
