<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.danielwinther.androidroomreservations.CreateReservationActivity"
    style="@style/layout">
    <LinearLayout
        style="@style/layout">
        <fragment
            android:name="com.example.danielwinther.androidroomreservations.TopFragment"
            android:id="@+id/topFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/createReservation"
            style="@style/headline" />
        <EditText
            android:id="@+id/createPurpose"
            android:hint="@string/purpose"
            style="@style/editText" />
        <Button
            style="@style/button"
            android:text="Pick date and time from"
            android:onClick="showFromDatePickerDialog" />
        <EditText
            android:id="@+id/createFrom"
            android:hint="@string/from"
            style="@style/editText" />

        <Button
            style="@style/button"
            android:text="Pick date and time to"
            android:onClick="showToDatePickerDialog" />
        <EditText
            android:id="@+id/createTo"
            android:hint="@string/to"
            style="@style/editText" />

        <Spinner
            android:id="@+id/createRoomId"
            android:hint="@string/roomId"
            style="@style/editText" />

        <Button
            android:id="@+id/create"
            android:onClick="create"
            android:text="@string/create"
            style="@style/button"/>
        <Button
            android:onClick="back"
            android:text="@string/backButton"
            style="@style/button" />
    </LinearLayout>
</ScrollView>