<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sannewinther.mandatoryassignment.BuildingActivity"
    style="@style/layout">
    <ImageView
        android:src="@drawable/logo"
        style="@style/logo" />
    <TextView
        android:text="@string/cityDetails"
        style="@style/headline" />
    <TextView
        android:id="@+id/cityName"
        style="@style/underHeadline" />

    <TextView
        android:text="@string/building"
        style="@style/headline" />

    <ListView
        android:id="@+id/listView"
        style="@style/list" />

    <Button
        android:onClick="back"
        android:text="@string/backButton"
        style="@style/button" />
</LinearLayout>
