<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CityActivity"
    style="@style/layout">
    <fragment
        class="com.example.danielwinther.androidroomreservations.TopFragment"
        android:id="@+id/topFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_top" />

    <TextView
        android:text="@string/city"
        style="@style/headline" />

    <ListView
        android:id="@+id/listView"
        style="@style/list" />

    <Button
        android:onClick="myReservation"
        android:text="@string/myReservations"
        style="@style/button" />
    <Button
        android:onClick="logout"
        android:text="@string/logout"
        style="@style/button" />
</LinearLayout>
