<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.danielwinther.androidroomreservations.RoomActivity"
    style="@style/layout">
    <fragment
        class="com.example.danielwinther.androidroomreservations.TopFragment"
        android:id="@+id/topFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_top" />

    <TextView
        android:id="@+id/kilometers"
        android:text="@string/room"
        style="@style/headline" />

    <ListView
        android:id="@+id/listView"
        style="@style/list" />

    <Button
        android:onClick="googleMaps"
        android:text="@string/googleMaps"
        style="@style/button" />
    <Button
        android:onClick="back"
        android:text="@string/backButton"
        style="@style/button" />

</LinearLayout>
