<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.danielwinther.androidroomreservations.ReservationDetailActivity"
    style="@style/layout">
    <fragment
        android:name="com.example.danielwinther.androidroomreservations.TopFragment"
        android:id="@+id/topFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_top" />

    <TextView
        android:text="@string/reservaionDetails"
        style="@style/headline" />

    <TextView
        android:id="@+id/purpose"
        style="@style/underHeadline" />
    <TextView
        android:id="@+id/fromTime"
        style="@style/underHeadline" />
    <TextView
        android:id="@+id/toTime"
        style="@style/underHeadline" />

    <Button
        android:onClick="updateReservation"
        android:text="@string/updateReservation"
        style="@style/button" />
    <Button
        android:onClick="deleteReservation"
        android:text="@string/deleteReservation"
        style="@style/deleteButton" />
    <Button
        android:onClick="back"
        android:text="@string/backButton"
        style="@style/button" />
</LinearLayout>
